优化自动化脚本

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 deploy:
   provider: pages
   local_dir: site
-  repo: rc-mobile.github.io
+  repo: rc-mobile/rcm-mobile
   skip_cleanup: true
   github_token: $token
   on:
